Deployed app to Kubernetes using Docker.