@@ -1,8 +1,8 @@
 # Build stage
-FROM gradle:8.14.2-jdk24 AS build
+FROM gradle:8.14.2-jdk24-alpine AS build
 
 # Создаём пользователя для безопасности
-RUN useradd -m myuser && \
+RUN adduser -D myuser && \
     mkdir -p /usr/src/app && \
     chown myuser:myuser /usr/src/app
 
@@ -16,13 +16,13 @@ COPY --chown=myuser:myuser . .
 RUN gradle build --no-daemon -x test
 
 # Run stage
-FROM eclipse-temurin:24
+FROM amazoncorretto:24-alpine3.21-jdk
 
 # Копируем собранный JAR
 COPY --from=build /usr/src/app/solo-leveling-player-service/build/libs/*.jar /app/solo-leveling-player.jar
 
 # Безопасность: создаём пользователя
-RUN useradd -m myuser && \
+RUN adduser -D myuser && \
     mkdir -p /app && \
     chown myuser:myuser /app
 
@@ -30,7 +30,10 @@ USER myuser
 WORKDIR /app
 
 # Открываем порт
-EXPOSE 8080
+EXPOSE 8080 9090
 
 # Запускаем приложение
-CMD ["java", "-jar", "solo-leveling-player.jar"]
+CMD ["java", \
+    "--enable-native-access=ALL-UNNAMED", \
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+    "-jar", "solo-leveling-player.jar"]
